--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "strapi-sdk-javascript": "^0.3.3",
+    "swiper": "^10.0.4",
     "typescript": "^4.9.5",
     "typescript-react-hooks": "^0.1.0",
     "use-history": "^1.4.1",
