--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@ionic/react": "^7.1.1",
     "@leecheuk/react-google-login": "^5.4.1",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.14.2",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@react-jvectormap/core": "^1.0.4",
     "@react-oauth/google": "^0.11.0",
     "@reacticons/ionicons": "^7.1.0",
@@ -25,6 +29,8 @@
     "axios": "^1.4.0",
     "jsvectormap": "^1.5.3",
     "jwt-decode": "^3.1.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
