--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^1.4.0",
     "jsvectormap": "^1.5.3",
     "jwt-decode": "^3.1.2",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "query-string": "^8.1.0",
@@ -39,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-gapi-auth2": "^1.0.4",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.8.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
