--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-gapi-auth2": "^1.0.4",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.8.3",
     "react-responsive-carousel": "^3.2.23",
