user input contact us

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rsuite": "^5.37.0",
     "slick-carousel": "^1.8.1",
     "strapi-sdk-javascript": "^0.3.3",
+    "sweetalert2": "^11.7.22",
     "swiper": "^10.0.4",
     "typescript": "^4.9.5",
     "typescript-react-hooks": "^0.1.0",
