--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "rsuite": "^5.37.0",
     "slick-carousel": "^1.8.1",
     "strapi-sdk-javascript": "^0.3.3",
+    "sweetalert2": "^11.7.22",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.4.1",
     "typescript": "^4.9.5",
     "typescript-react-hooks": "^0.1.0",
