--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "rsuite": "^5.37.0",
     "slick-carousel": "^1.8.1",
     "strapi-sdk-javascript": "^0.3.3",
