--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_API_URL = https://satir.rohisyam.online/api
 # REACT_APP_UPLOAD_URL = http://127.0.0.1:1337
-# REACT_APP_API_URL = https://satir.rohisyam.online/api
+# REACT_APP_API_URL = https://127.0.0.1:1337/api
 REACT_APP_UPLOAD_URL = https://satir.rohisyam.online
 # REACT_APP_NEST_URL=http://127.0.0.1:4001/user/users
 # REACT_APP_SIGNUP_URL=http://127.0.0.1:4001/user/register
