Feature/4 feature change guide (#26)
* update feature and remove

* update

* update

* update konseling

---------

Co-authored-by: mahrus-rohisyam <mahrusaim@gmail.comm>

--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
