--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "webpack": "^5.91.0"
   }
 }
